--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>What's your EXTREME trivia I.Q.?</title>
+  <title>What's your random trivia I.Q.?</title>
   <base href="/">
   <link href="https://fonts.googleapis.com/css?family=Josefin+Sans|Orbitron" rel="stylesheet">
   <meta name="viewport" content="width=device-width, initial-scale=1">
